--- a/public/costum/lookbook.css
+++ b/public/costum/lookbook.css
@@ -17,105 +17,174 @@
     left: 12%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot1 {
-    top: 23%;
-    left: 28%;
+    top: 3%;
+    left: 22%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot2 {
-    top: 23%;
-    left: 38%;
+    top: 3%;
+    left: 33%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot3 {
-    top: 23%;
-    left: 48%;
+    top: 3%;
+    left: 44%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot4 {
-    top: 23%;
-    left: 58%;
+    top: 3%;
+    left: 55%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot5 {
-    top: 23%;
-    left: 68%;
+    top: 3%;
+    left: 66%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot6 {
-    top: 36%;
-    left: 28%;
+    top: 3%;
+    left: 77%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot7 {
-    top: 36%;
-    left: 38%;
+    top: 18%;
+    left: 22%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot8 {
-    top: 36%;
-    left: 48%;
+    top: 18%;
+    left: 33%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot9 {
-    top: 36%;
-    left: 58%;
+    top: 18%;
+    left: 44%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot10 {
-    top: 36%;
-    left: 68%;
+    top: 18%;
+    left: 55%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot11 {
-    top: 49%;
-    left: 28%;
+    top: 18%;
+    left: 66%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot12 {
-    top: 49%;
-    left: 38%;
+    top: 18%;
+    left: 77%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot13 {
-    top: 49%;
-    left: 48%;
+    top: 33%;
+    left: 22%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot14 {
-    top: 49%;
-    left: 58%;
+    top: 33%;
+    left: 33%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot15 {
-    top: 49%;
-    left: 68%;
+    top: 33%;
+    left: 44%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot16 {
-    top: 62%;
-    left: 28%;
+    top: 33%;
+    left: 55%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot17 {
-    top: 62%;
-    left: 38%;
+    top: 33%;
+    left: 66%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot18 {
-    top: 62%;
-    left: 48%;
+    top: 33%;
+    left: 77%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot19 {
-    top: 62%;
-    left: 58%;
+    top: 48%;
+    left: 22%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot20 {
-    top: 62%;
-    left: 68%;
+    top: 48%;
+    left: 33%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot21 {
-    top: 75%;
-    left: 28%;
+    top: 48%;
+    left: 44%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot22 {
-    top: 75%;
-    left: 38%;
+    top: 48%;
+    left: 55%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot23 {
-    top: 75%;
-    left: 48%;
+    top: 48%;
+    left: 66%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot24 {
-    top: 75%;
-    left: 58%;
+    top: 48%;
+    left: 77%;
 }
 .lookbook .lookbook-block .lookbook-dot.dot25 {
-    top: 75%;
-    left: 68%;
+    top: 63%;
+    left: 22%;
 }
+.lookbook .lookbook-block .lookbook-dot.dot26 {
+    top: 63%;
+    left: 33%;
+}
+.lookbook .lookbook-block .lookbook-dot.dot27 {
+    top: 63%;
+    left: 44%;
+}
+.lookbook .lookbook-block .lookbook-dot.dot28 {
+    top: 63%;
+    left: 55%;
+}
+.lookbook .lookbook-block .lookbook-dot.dot29 {
+    top: 63%;
+    left: 66%;
+}
+.lookbook .lookbook-block .lookbook-dot.dot30 {
+    top: 63%;
+    left: 77%;
+}
+.lookbook .lookbook-block .lookbook-dot.dot31 {
+    top: 78%;
+    left: 22%;
+}
+.lookbook .lookbook-block .lookbook-dot.dot32 {
+    top: 78%;
+    left: 33%;
+}
+.lookbook .lookbook-block .lookbook-dot.dot33 {
+    top: 78%;
+    left: 44%;
+}
+.lookbook .lookbook-block .lookbook-dot.dot34 {
+    top: 78%;
+    left: 55%;
+}
+.lookbook .lookbook-block .lookbook-dot.dot35 {
+    top: 78%;
+    left: 66%;
+}
+.lookbook .lookbook-block .lookbook-dot.dot36 {
+    top: 78%;
+    left: 77%;
+}
+.lookbook .lookbook-block .lookbook-dot.dot37 {
+    top: 93%;
+    left: 22%;
+}
+.lookbook .lookbook-block .lookbook-dot.dot38 {
+    top: 93%;
+    left: 33%;
+}
+.lookbook .lookbook-block .lookbook-dot.dot39 {
+    top: 93%;
+    left: 44%;
+}
+.lookbook .lookbook-block .lookbook-dot.dot40 {
+    top: 93%;
+    left: 55%;
+}
+.lookbook .lookbook-block .lookbook-dot.dot41 {
+    top: 93%;
+    left: 66%;
+}
+.lookbook .lookbook-block .lookbook-dot.dot42 {
+    top: 93%;
+    left: 77%;
+}
+
 .lookbook .lookbook-block .lookbook-dot:before {
     position: absolute;
     top: 0;
